--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "compression": "^1.7.1",
     "polka": "next",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
-    "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -28,6 +27,8 @@
     "@rollup/plugin-url": "^5.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0.0",
+    "sapper": "^0.28.0",
+    "svelte": "^3.17.3"
   }
 }
