--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "TODO",
   "description": "TODO",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
